--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
@@ -437,7 +437,7 @@ $(function(){
 	                    <li id="errMsg_confirmPwd"> 
 	                        <span class="form-title">新登录密码</span>
 	                        <input id="login_password1" name="login_password1" class="ipt-password input-text" type="password">
-	                        <span class="tips-normal">请输入密码</span>
+	                        <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
 	                        <span class="tips-check"><i class="icon"></i><font id="confirmPwdTips"></font></span>
 	                    </li>
 	                    <li id="errMsg_confirmPwd2"> 
@@ -471,7 +471,7 @@ $(function(){
                                     <li id="errMsg_password1">  
                                         <span class="form-title">新交易密码</span>
                                         <input class="ipt-password1 input-text" id="trade_password1" name="password1" type="password" maxlength="20"  >
-                                        <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
+                                        <span class="tips-normal">6位数字密码</span>
                                         <span class="tips-check"><i class="icon"></i><font id="password1Tips"></font></span>
                                     </li>
                                     <li id="errMsg_password2">
@@ -526,7 +526,7 @@ $(function(){
                                     <li id="errMsg_password_back1">
                                         <span class="form-title">新交易密码</span>
                                         <input id="trade_password_back1" name="password1" class="ipt-password1 input-text"  maxlength="20" type="password" >
-                                        <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
+                                        <span class="tips-normal">6位数字密码</span>
                                         <span class="tips-check"><i class="icon"></i><font id="passwordBack1Tips"></font></span>
                                     </li>
                                     <li id="errMsg_password_back2">
