--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/ufb_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/ufb_index.vm
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>幼富宝</title>
+<script type="text/javascript" src="${staticDomain}/family/scripts/load.js"></script>
 <script type="text/javascript">
 		$('.nav a:eq(1)').addClass('active');
 		
