--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/ufb_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/ufb_index.vm
@@ -181,7 +181,7 @@ $(function(){
 		     <div class="addCard">
                 银行卡已添加<span class="cBlue">$!{hft_family_trade_size}</span>张
 				<a href="${ufbDomain}/family/setting/bankcard_index.htm" class="readAll">查看全部</a>
-				<a href="#" id="addBankCard" isufbCard="$!{isufbCard}">+新卡</a>
+				<!--<a href="#" id="addBankCard" isufbCard="$!{isufbCard}">+新卡</a>-->
              </div>
 		</div>
 		<div class="a2 width928">
