--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/help/contact.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/help/contact.vm
@@ -2,6 +2,11 @@
 <html>
 <head>
     <title>幼富通 - 帮助中心 - 联系我们</title>
+ <script>
+    $(function(){
+    	$('.nav a:eq(3)').addClass('active');
+    })
+ </script>
 </head>
 <body>
     <div class="body">
