--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/findpwd_confirm.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/findpwd_confirm.vm
@@ -2,58 +2,12 @@
 <html>
 <head>
     <title>幼富通 - 忘记密码</title>
-</head>
-<body>
 
-    <div class="body">
-        <div class="inner container-find">
-            <div class="find-tabs tabs-step2 clearfix">
-                <a class="tab fl" href="javascript:;">1-验证身份</a>
-                <a class="tab fl on" href="javascript:;">2-设置登录密码</a>
-                <a class="tab fl" href="javascript:;">3-完成</a>
-            </div>
-            <div class="find-panels">
-                <form class="common-form" id="form-confirm" method="post" action="${ufbDomain}/family/setting/findpwd_success.htm">
-                <input type="hidden" id="mobileno" name="mobileno" value="${CustInfoVo.mobileno}" >    
-                <div class="panel">
-                        <ul class="txtAuto width600">
-                            <li id="errMsg_password1">
-                                <span class="form-title">新登录密码</span>
-                                <input id="password1" name="password1" class="ipt-password input-text" type="password">
-                                <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
-                                <span class="tips-check"><i class="icon"></i><font id="password1Tips"></font></span>
-                            </li>
-                            <li id="errMsg_password2">
-                            <span class="form-title">确认新登录密码</span>
-                            <input id="password2" name="password2" class="ipt-password input-text" type="password">
-                            <span class="tips-normal">请再次输入密码</span>
-                            <span class="tips-check"><i class="icon"></i><font id="password2Tips"></font></span>
-                            </li>
-                            <li>
-                                <input id="btn-subForm" class="input-button ok" type="button" value="提&nbsp;交">
-                            </li>
-                        </ul>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-
-</div>
- 
 <script src="${staticDomain}/family/scripts/load.js"></script>
 <script src="${staticDomain}/family/scripts/family-common.js"></script>
 <script >
 $(function(){
 	
-	// 用户输入时，取消错误提示
-		$("form input").on('focus', function(){
-			if($(this).parent().hasClass('error')){
-				$(this).parent().removeClass('error');
-				//$(this).siblings('.tips-check').hide();
-			}
-		});
-		
 	//校验登录密码是否与交易密码相同
 	var isTradePwdSameUnLoign=function(password,mobileno){
 		var result=false;
@@ -93,41 +47,88 @@ $(function(){
 	 		});
 		 return result;
 	}
+	
+	// 用户输入时，取消错误提示
+	$("form input").on('focus', function(){
+		if($(this).parent().hasClass('error')){
+			$(this).parent().removeClass('error');
+		}
+	});
+	
+	//提交表单
 	$("#btn-subForm").on("click",function(){
-				 var password1=$("#password1").val();
-				var text=check_pwd1(password1)
-				 if(password1==''){
-					 $("#errMsg_password1").addClass("error");
-					 $("#password1Tips").html("新登录密码不能为空！");
-					 return false;
-				 }else if(text!=""){
-					$("#errMsg_password1").addClass("error");
-					$("#password1Tips").html(text);
-					return false;
-				 }else{
-					$("#errMsg_password1").removeClass("error");
-				 }
-				//确认密码
-				 var password2=$("#password2").val();
-				 var text2=check_pwd2(password1,password2);
-				 if(password2==''){
-					 $("#errMsg_password2").addClass("error");
-					 $("#password2Tips").html("确认密码不能为空！");
-					 return false;
-				 }else if(text2!=''){
-					 $("#errMsg_password2").addClass("error");
-					 $("#password2Tips").html(text2);
-					return false;
-				}else{
-					 $("#errMsg_password2").removeClass("error");
-				}
-		  if(check_updatepwd()){
-			  location="${ufbDomain}/family/setting/findpwd_result.htm";
-		  }
+		 var password1=$("#password1").val();
+		var text=check_pwd1(password1)
+		 if(password1==''){
+			 $("#errMsg_password1").addClass("error");
+			 $("#password1Tips").html("新登录密码不能为空！");
+			 return false;
+		 }else if(text!=""){
+			$("#errMsg_password1").addClass("error");
+			$("#password1Tips").html(text);
+			return false;
+		 }else{
+			$("#errMsg_password1").removeClass("error");
+		 }
+		//确认密码
+		 var password2=$("#password2").val();
+		 var text2=check_pwd2(password1,password2);
+		 if(password2==''){
+			 $("#errMsg_password2").addClass("error");
+			 $("#password2Tips").html("确认密码不能为空！");
+			 return false;
+		 }else if(text2!=''){
+			 $("#errMsg_password2").addClass("error");
+			 $("#password2Tips").html(text2);
+			return false;
+		}else{
+			 $("#errMsg_password2").removeClass("error");
+		}
+	    if(check_updatepwd()){
+		  location="${ufbDomain}/family/setting/findpwd_result.htm";
+	    }
 	})
 
 
 })
 </script>
+</head>
+<body>
+
+    <div class="body">
+        <div class="inner container-find">
+            <div class="find-tabs tabs-step2 clearfix">
+                <a class="tab fl" href="javascript:;">1-验证身份</a>
+                <a class="tab fl on" href="javascript:;">2-设置登录密码</a>
+                <a class="tab fl" href="javascript:;">3-完成</a>
+            </div>
+            <div class="find-panels">
+                <form class="common-form" id="form-confirm" method="post" action="${ufbDomain}/family/setting/findpwd_success.htm">
+                <input type="hidden" id="mobileno" name="mobileno" value="${CustInfoVo.mobileno}" >    
+                <div class="panel">
+                        <ul class="txtAuto width600">
+                            <li id="errMsg_password1">
+                                <span class="form-title">新登录密码</span>
+                                <input id="password1" name="password1" class="ipt-password input-text" type="password">
+                                <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
+                                <span class="tips-check"><i class="icon"></i><font id="password1Tips"></font></span>
+                            </li>
+                            <li id="errMsg_password2">
+                            <span class="form-title">确认新登录密码</span>
+                            <input id="password2" name="password2" class="ipt-password input-text" type="password">
+                            <span class="tips-normal">请再次输入密码</span>
+                            <span class="tips-check"><i class="icon"></i><font id="password2Tips"></font></span>
+                            </li>
+                            <li>
+                                <input id="btn-subForm" class="input-button ok" type="button" value="提&nbsp;交">
+                            </li>
+                        </ul>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
