--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/findpwd_success.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/findpwd_success.vm
@@ -16,8 +16,8 @@
                 <div class="panel">
                     <div class="form-done">
                         <div class="title">新密码设置成功</div>
-                        <div class="tips">请牢记新密码</div>
-                        <a class="btn" href="${ufbDomain}/family/uft/uft_index.htm">我的账户</a>
+                        <div class="tips">请牢记新密码，并重新登录！</div>
+                        <a class="btn" href="${ufbDomain}/family/uft/uft_index.htm">登&nbsp;&nbsp;录</a>
                     </div>
                 </div>
             </div>
