--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
@@ -11,14 +11,7 @@ $(function(){
             _this.siblings(".tips-normal").hide();
         }
     });
-	// 用户输入时，取消错误提示
-		$("form input").on('focus', function(){
-			if($(this).parent().hasClass('error')){
-				$(this).parent().removeClass('error');
-			//	$(this).siblings('.tips-check').hide();
-			}
-		});
-		
+
 	// 检验图形验证码
 	function verifycode_check(verifycode){
 		if(verifycode==''){
@@ -102,7 +95,6 @@ $(function(){
 			}
 		}
 
-	//
 	var clearDownTime=function(){
 		count=0;
 		clearTimeout(countDown);
@@ -367,6 +359,14 @@ $(function(){
 		}
 	});
 	#end
+	
+	// 用户输入时，取消错误提示
+	$("form input").on('focus', function(){
+		if($(this).parent().hasClass('error')){
+			$(this).parent().removeClass('error');
+		}
+	});
+		
 	$("#tab1").on("click",function(){
 		$("#login_password0").val("");
 		$("#login_password1").val("");
@@ -431,7 +431,7 @@ $(function(){
 	                    <li id="errMsg_password"> 
 	                        <span class="form-title">原登录密码</span>
 	                        <input id="login_password0" name="login_password0" class="ipt-password input-text" type="password">
-	                        <span class="tips-normal">请输入密码</span>
+	                        <span class="tips-normal">请输入原登录密码</span>
 	                        <span class="tips-check"><i class="icon"></i><font id="passwordTips">验证提示</font></span>
 	                   </li>
 	                    <li id="errMsg_confirmPwd"> 
