--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoadd_preview.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoadd_preview.vm
@@ -10,21 +10,22 @@ $(function(){
 		$("form input").on('focus', function(){
 			if($(this).parent().hasClass('error')){
 				$(this).parent().removeClass('error');
-				//$(this).siblings('.tips-check').hide();
 			}
 		});
 		
 	// 点击银行卡
-	$(".card").on("click", function(){
+	$(".card-list").on("click", function(){
 		$("#frombankserialid").val($(this).attr("serialid"));
 		$("#frombankno").val($(this).attr("frombankno"));
 		$("#frombanktail").val($(this).attr("frombanktail"));
 	});
+	
 	// 上一页
 	$("#btn-autoTrade-add").on("click",function(){
 		$("#form-autoTrade-result").attr("action", "${ufbDomain}/family/ufb/autoadd_index.htm");
 		$("#form-autoTrade-result").submit();
 	});
+	
 	// 表单提交时，验证	
 	$("#next-step").on("click", function(){
 		var tradepwd=$("#tradepwd").val();
@@ -123,8 +124,8 @@ $(function(){
 								</span>
                             </li>
                             <li>
-                                <span class="form-title">备注</span>
-                                <span class="form-text">${AutoTradeVo.summary}</span>
+                                <span class="form-title" style="top: 50%;">备注</span>
+                                <span class="form-text">#if(${AutoTradeVo.summary}) $!{AutoTradeVo.summary} #else &nbsp;&nbsp; #end</span>
                             </li>
                             <li id="tradepwdErrMsg">
                                 <span class="form-title">交易密码</span>
